<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/form"
    android:layout_width="380dp"
    android:orientation="vertical"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:background="#E0E0E0"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--Put form controls here-->

    <TextView
        android:id="@+id/newEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/newEvent"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/eventName"
        android:hint="Name"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/eventLocation"
        android:hint="Location"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/startTime"
        android:hint="Start Time"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/endTime"
        android:hint="End Time"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"/>

    <CheckBox
        android:id="@+id/allDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="All Day"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="160dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>